--- a/src/client/index.css
+++ b/src/client/index.css
@@ -83,7 +83,7 @@ body {
 
 .card-title {
 	margin-top: 5px;
-	margin-bottom: 40px;
+	margin-bottom: 20px;
 }
 
 h1 {
@@ -140,4 +140,31 @@ p {
 .btn-block {
 	margin-top: 15px;
 	display: block;
+}
+
+.link,
+.link:visited {
+	color: black;
+	text-decoration: none;
+	cursor: pointer;
+}
+
+.link:hover {
+	text-decoration: underline;
+}
+
+.btn-image {
+	background-color: #ff9c4c;
+	display: block;
+	width: 100%;
+	font-size: 20px;
+}
+
+.modal {
+	border-radius: 12px;
+	border: none;
+}
+
+.skin-image {
+	
 }
