--- a/src/client/index.css
+++ b/src/client/index.css
@@ -163,6 +163,7 @@ p {
 .modal {
 	border-radius: 12px;
 	border: none;
+	max-width: 80%;
 }
 
 .skin-image {
@@ -188,4 +189,9 @@ p {
 
 .align-right {
 	text-align: right;
+}
+
+#modal-content {
+	overflow: scroll;
+	display: flex;
 }
