--- a/src/client/index.css
+++ b/src/client/index.css
@@ -195,3 +195,17 @@ p {
 	overflow: scroll;
 	display: flex;
 }
+
+.footer > a > svg {
+	height: 60px;
+	margin: 15px;
+	transition: 0.2s;
+}
+
+.footer {
+	text-align: center;
+}
+
+.footer > a > svg:hover {
+	transform: scale(1.2);
+}
