--- a/src/client/index.css
+++ b/src/client/index.css
@@ -170,6 +170,7 @@ p {
 	border-radius: 12px;
 	border: none;
 	max-width: 80%;
+	overflow-y: scroll;
 }
 
 .skin-image {
@@ -180,17 +181,13 @@ p {
 	margin-right: 2px;
 }
 
-.close-button {
+.modal-button {
 	cursor: pointer;
 	border: none;
 	margin: 4px;
 	padding: 4px;
 	border-radius: 2px;
 	margin-bottom: 10px;
-}
-
-.close-button::after {
-	content: 'Close';
 }
 
 .align-right {
@@ -214,4 +211,46 @@ p {
 
 .footer > a > svg:hover {
 	transform: scale(1.2);
+}
+
+.settings-button {
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
+	border: none;
+	background-color: #3d5dff;
+	color: white;
+	text-decoration: none;
+	border-radius: 8px;
+	padding: 8px;
+	transition: 0.2s;
+	cursor: pointer;
+	height: 50px;
+	width: 50px;
+	align-items: center;
+	justify-content: center;
+	display: flex;
+	box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+	z-index: 100;
+}
+
+.settings-button > svg {
+	height: 30px;
+}
+
+.settings-button:hover {
+	filter: brightness(120%);
+}
+
+.home-button,
+.home-button:visited {
+	color: #3d5dff;
+	text-decoration: none;
+	top: 0.1em;
+	position: relative;
+	transition: 0.2s;
+}
+
+.home-button:hover {
+	filter: brightness(120%);
 }
