--- a/src/client/index.css
+++ b/src/client/index.css
@@ -185,9 +185,15 @@ p {
 	cursor: pointer;
 	border: none;
 	margin: 4px;
+	margin-left: 0;
 	padding: 4px;
 	border-radius: 2px;
 	margin-bottom: 10px;
+}
+
+.modal-button[disabled] {
+	background-color: #ccc;
+	cursor: default;
 }
 
 .align-right {
